# control_panel_for_search_engine

./: CMakeLists.txt  README.md  controlPanel.cpp  controlPanel.h  controlPanel.ui  main.cpp
